<resources>
    <string name="app_name">LocLook</string>

    <string name="phone_text">Телефон:</string>

    <string name="phone_head_hint">+7</string>
    <string name="phone_body_hint"> (900) 000 - 00 - 00 </string>

    <string name="enter_text">Войти</string>

    <string name="open_left_menu">Open left menu</string>

    <string name="enter_your_name_text">Введите ваше имя</string>
    <string name="user_name_hint">Имя пользователя..</string>

    <string name="enter_sms_code_text">Мы выслали Вам СМС с кодом подтверждения, введите его в поле ниже</string>
    <string name="enter_sms_code_hint">Код..</string>
    <string name="no_sms_code_text">Код авторизации отсутствует</string>

    <string name="back_text">Назад</string>
    <string name="continue_text">Продолжить</string>

    <string name="feed_text">Лента</string>
    <string name="favorites_text">Избранное</string>
    <string name="notifications_text">Уведомления</string>
    <string name="badges_text">Бейджики</string>
    <string name="geolocation_text">Регион</string>
    <string name="exit_text">Выход</string>

    <string name="publication_text">Публикация</string>
    <string name="publication_left_characters_head">Осталось</string>
    <string name="publication_left_characters_tail">символов</string>
    <string name="publication_hint">Сообщите окружающим что-нибудь интересное</string>

    <string name="publication_anonymous_text">Анонимно</string>
    <string name="publication_quiz_text">Опрос</string>
    <string name="publication_badge_text">Бейджик</string>

    <string name="state_on_text">(вкл.)</string>
    <string name="state_off_text">(выкл.)</string>

    <string name="сomments_text">Комментарии</string>

    <string name="answers_text">Ответы:</string>
    <string name="answers_sum_text">Ответов: </string>
    <string name="add_answer_text">Добавить вариант ответа</string>

    <string name="photo_text">Фото</string>
    <string name="add_from_gallery_text">Добавить из галереи</string>
    <string name="create_photo_text">Сделать фото</string>

    <string name="get_photo_error_text">Не удалось получить фото</string>

    <string name="default_date">00.00.0000</string>

    <string name="default_publication_text">Текст публикации..</string>

    <string name="empty_feed_text">Лента пока пуста..</string>
    <string name="add_publication_text">Добавить публикацию</string>

    <string name="photo_gallery_text">Фото Галерея</string>

    <string name="likes_text">Нравится</string>

    <!--<string name="sending_publication_text">Отправка публикации</string>-->
    <!--<string name="action_publication_text">Действие</string>-->
    <!--<string name="action_result_publication_text">Результат</string>-->

    <string-array name="badges">
        <item>LocLook</item>
        <item>Интересные места</item>
        <item>Одобрение</item>
        <item>Осуждение</item>
        <item>Важное</item>
        <item>Вопрос</item>
        <item>Спорт</item>
        <item>Объявления</item>
        <item>ДТП</item>
        <item>Сплетни</item>
        <item>Олень</item>
        <item>Срочная новость</item>
        <item>Митинг</item>
        <item>Плохое обслуживание</item>
        <item>Работа</item>
        <item>Мероприятие</item>
        <item>Спросить дорогу</item>
        <item>Учеба</item>
        <item>Игры</item>
        <item>Новость</item>
        <item>День рождения</item>
        <item>ЧП</item>
        <item>Тусовка</item>
        <item>Отношения</item>
    </string-array>

    <string name="empty_publication_text">Публикация не содержит текста</string>
    <string name="need_more_answers_text">В опросе должно быть не менее 2 ответов</string>
    <string name="publication_send_error_text">Отправить публикацию не удалось</string>

    <string name="all_answered_sum_text">Всего проголосовало:</string>

    <string name="write_comment_text_hint">Напишите свой комментарий</string>

    <string name="comments_sum_text">Комментариев:</string>

</resources>
