<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WW"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/Publication_HeaderBlock"
        style="@style/MW">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/Publication_UserAvatarIV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/userpic_holder"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="0dp"/>
        <TextView
            android:id="@+id/Publication_UserNameTV"
            style="@style/WW"
            android:layout_toRightOf="@+id/Publication_UserAvatarIV"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/deep_blue"
            android:text="@string/user_name_hint"/>
        <TextView
            android:id="@+id/Publication_DateAndTimeTV"
            style="@style/WW"
            android:layout_toRightOf="@+id/Publication_UserAvatarIV"
            android:layout_below="@+id/Publication_UserNameTV"
            android:paddingLeft="10dp"
            android:textSize="12sp"
            android:textColor="@color/dark_grey"
            android:text="@string/default_date"/>
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/Publication_BadgeImageIV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/badge_1"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="0dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Publication_BodyBlock"
        style="@style/MW"
        android:layout_below="@+id/Publication_HeaderBlock"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/Publication_TextTV"
            style="@style/MW"
            android:paddingRight="12dp"
            android:maxLines="5"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textColor="@color/black_text"
            tools:text="@string/default_publication_text"/>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/Publication_FooterBlock"
        style="@style/MW"
        android:orientation="horizontal"
        android:layout_below="@+id/Publication_BodyBlock"
        android:layout_marginTop="20dp"
        android:weightSum="4">

        <FrameLayout
            android:id="@+id/Publication_FavoritesBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/star_icon"/>

        </FrameLayout>
        <RelativeLayout
            android:id="@+id/Publication_AnswersBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/Publication_AnswersSumTV"
                style="@style/WW"
                android:paddingRight="3dp"
                android:layout_toLeftOf="@+id/Publication_AnswersSumIV"
                android:layout_centerInParent="true"
                android:textSize="10sp"
                android:textColor="@color/deep_blue"
                tools:text="0"/>
            <ImageView
                android:id="@+id/Publication_AnswersSumIV"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerInParent="true"
                android:src="@drawable/comments_icon"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/Publication_LikesBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/Publication_LikesSumTV"
                style="@style/WW"
                android:paddingRight="3dp"
                android:layout_toLeftOf="@+id/Publication_LikesSumIV"
                android:layout_centerInParent="true"
                android:textSize="10sp"
                android:textColor="@color/deep_blue"
                tools:text="0"/>
            <ImageView
                android:id="@+id/Publication_LikesSumIV"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerInParent="true"
                android:src="@drawable/like_icon"/>

        </RelativeLayout>
        <FrameLayout
            android:id="@+id/Publication_InfoBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="right"
                android:src="@drawable/publication_info_icon"/>

        </FrameLayout>

    </LinearLayout>
    <View
        android:id="@+id/Publication_BottomLine"
        style="@style/HLine_Grey"
        android:layout_below="@+id/Publication_FooterBlock"/>

</RelativeLayout>